fixing the asset package

--- a/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
+++ b/UDK-2011-08/UDKGame/Config/UDKEditorUserSettings.ini
@@ -167,7 +167,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=46
+CurrentTip=47
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -526,7 +526,7 @@ StartPage_Docked=True
 StartPage_Visible=True
 
 [UnrealEd]
-RecentAssets="                              NomonAssets.arches_right NomonAssets.arches_ornate_right NomonAssets.Wheel NomonAssets.pillar_top_left NomonAssets.arches_ornate_left NomonAssets.arches_ornate_middle NomonAssets.wall_torch_holder NomonAssets.torch_wall NomonAssets.spikes NomonAssets.spear NomonAssets.railing_broken NomonAssets.railing NomonAssets.pot_brokenC NomonAssets.pot_brokenB NomonAssets.pot_brokenA NomonAssets.pot NomonAssets.pillars_ring_B NomonAssets.pillars_ring_A NomonAssets.pillar_top_right NomonAssets.pillar_top_middle NomonAssets.pillar_brokenD_top NomonAssets.pillar_brokenD_middle NomonAssets.pillar_brokenD_bottom NomonAssets.pillar_brokenC_bottom NomonAssets.pillar_brokenB_top NomonAssets.pillar_brokenB_bottom NomonAssets.pillar_brokenA_top NomonAssets.pillar_brokenA_bottom NomonAssets.pillar_broken_wornA NomonAssets.pillar "
+RecentAssets="                              NomonAssets.pillar_top_left NomonAssets.arches_right NomonAssets.Wheel NomonAssets.wall_torch_holder NomonAssets.torch_wall NomonAssets.spikes NomonAssets.spear NomonAssets.railing_broken NomonAssets.railing NomonAssets.pot_brokenB NomonAssets.pot_brokenA NomonAssets.pot NomonAssets.pillars_ring_B NomonAssets.pillars_ring_A NomonAssets.pillar_top_right NomonAssets.pillar_top_middle NomonAssets.pillar_brokenD_top NomonAssets.pillar_brokenD_middle NomonAssets.pillar_brokenD_bottom NomonAssets.pillar_brokenC_bottom NomonAssets.pillar_brokenB_top NomonAssets.pillar_brokenB_bottom NomonAssets.pillar_brokenA_top NomonAssets.pillar_brokenA_bottom NomonAssets.pillar_broken_wornA NomonAssets.pillar NomonAssets.gate_wall_blocked NomonAssets.gate_wall NomonAssets.gate NomonAssets.enemy2 "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -691,7 +691,7 @@ FilterPanelSearchString=
 LeftPanelWidth=266.000000
 IsLeftPanelCollapsed=False
 ExpandedPackages=/Engine;/UDKGame;/UDKGame/Content;/UDKGame/Content/Nomon;/UDKGame/Content/Nomon/Assets;/UDKGame/Content/Nomon/Assets/NomonAssets;/UDKGame/Content/Nomon/Characters;/UDKGame/Content/Nomon/NomonLevels;/UDKGame/Content/Nomon/NomonLevels/NOM-LevelTest;
-LeftSubpanelsState=mSharedCollectionsSizer:False:152.484654300272|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:350.315345699728|
+LeftSubpanelsState=mSharedCollectionsSizer:False:135.26690928401|mPrivateCollectionsSizer:True:28.2|mPackagesSizer:False:367.53309071599|
 SelectedSharedCollection=UDK Cool Materials
 IsUsingFlatPackageList=False
 AssetViewLayoutAsDouble=3.000000
@@ -818,7 +818,7 @@ UDKAnimNodeSequence=Object.UDKAnimNodeSequence Object.AnimNodeSequence Object.Gr
 AnimNodeSequence=Object.AnimNodeSequence Object.Group Object.Display Object.Camera Object.Performance Object.Morph
 UDKAnimBlendByIdle=Object.AnimNodeBlendList Object.Performance Object.AnimNodeBlendBase Object.Morph
 AnimSequence=Object.AnimSequence
-Brush=Object.Brush Object.Attachment Object.Collision Object.Physics Object.Advanced Object.Debug 
+Brush=Object.Brush Object.Attachment Object.Collision Object.Physics Object.Advanced Object.Debug
 MaterialExpressionMeshEmitterVertexColor=
 MaterialExpressionTextureSample=
 TextureRenderTargetFactoryNew=
